--- a/web/frontend/src/App.css
+++ b/web/frontend/src/App.css
@@ -1,3 +1,12 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
+
+.MuiFab-root{
+  right: 20px;
+  bottom: 20px;
+  display: block;
+  position: fixed;
+}
+
 .App {
   text-align: center;
 }
