--- a/web/frontend/src/index.css
+++ b/web/frontend/src/index.css
@@ -24,19 +24,18 @@ input[type=text]:not(.browser-default):focus:not([readonly]), input[type=email]:
   border-color: #000000;
   box-shadow: none;
 }
-
+/* 
 button:focus {
   outline: none;
   background-color: #ffffff;
-}
+} */
 
 input[type=text]:not(.browser-default):focus:not([readonly])+label, textarea.materialize-textarea:focus:not([readonly])+label, input[type=email]:not(.browser-default):focus:not([readonly])+label, input[type=password]:not(.browser-default):focus:not([readonly])+label {
   color: #000000 !important;
 }
 
 .bckgrd {
-  background: rgb(205, 221, 154);
-  background: linear-gradient(90deg, rgba(205, 221, 154, 1) 0%, rgba(194, 122, 186, 1) 26%, rgba(209, 134, 177, 1) 55%);
+  background: #f3f3f3;
   background-size: 100%;
 }
 
